--- a/assets/scripts/config.ini
+++ b/assets/scripts/config.ini
@@ -1,4 +1,4 @@
-﻿way=E:\Backup\backup for srv\public backup
-disk=H:\Backup
-mytime=02:45
-script=C:\Script\Script#1.bat	
+way=C:\asdfsdf
+disk=D:\sdfsjfl
+day=FRI
+mytime=11:59
