--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,13 +65,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/main.html
-    - assets/cpp_libs/process_monitor.dll
-    - assets/scripts/Backup.bat
-    - assets/scripts/config.ini
-    - assets/scripts/eject.exe
-    - assets/scripts/load.exe
-    - assets/scripts/Tasksch.bat
+    - assets\scripts\Backup.bat
+    - assets\scripts\config.ini
+    - assets\scripts\eject.exe
+    - assets\scripts\load.exe
+    - assets\scripts\Tasksch.bat
+    - assets\main.html
+    - assets\cpp_libs\process_monitor.dll
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
