--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,18 +65,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-<<<<<<< HEAD
+    - assets/scripts/Backup.bat
+    - assets/scripts/config.ini
+    - assets/scripts/eject.exe
+    - assets/scripts/load.exe
+    - assets/scripts/Tasksch.bat
     - assets/main.html
     - assets/cpp_libs/process_monitor.dll
-=======
-    - assets\scripts\Backup.bat
-    - assets\scripts\config.ini
-    - assets\scripts\eject.exe
-    - assets\scripts\load.exe
-    - assets\scripts\Tasksch.bat
-    - assets\main.html
-    - assets\cpp_libs\process_monitor.dll
->>>>>>> 1b4da43d5dac3742e506c65c0838f27acda9e230
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
