--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   ffi: ^2.0.1
   win32: ^2.7.0
   flutter_html: ^2.2.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
